force-app/main/default/objects/DisclosureConsent__c/DisclosureConsent__c.object-meta.xml
<CustomObject>
    <description>Disclosure Consent for applicant and product</description>
    <label>Disclosure Consent</label>
    <nameField>
        <label>Disclosure Consent Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Disclosure Consents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>