force-app/main/default/objects/DisclosureConsent__c/fields/Applicant__c.field-meta.xml
<CustomField>
    <fullName>Applicant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>DIsclosure related to applicant</description>
    <label>Applicant</label>
    <referenceTo>Applicant__c</referenceTo>
    <relationshipLabel>Disclosure Consents</relationshipLabel>
    <relationshipName>DisclosureConsents</relationshipName>
    <type>Lookup</type>
</CustomField>