force-app/main/default/objects/DisclosureConsent__c/fields/ConsentDateTime__c.field-meta.xml
<CustomField>
    <fullName>ConsentDateTime__c</fullName>
    <description>time stamp of disclosure accepted</description>
    <label>Consent Date Time</label>
    <type>DateTime</type>
</CustomField>