force-app/main/default/objects/DisclosureConsent__c/fields/DisclosureLineItem__c.field-meta.xml
<CustomField>
    <fullName>DisclosureLineItem__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>related template</description>
    <label>Disclosure Line Item</label>
    <referenceTo>DisclosureLineItem__c</referenceTo>
    <relationshipLabel>Disclosure Consents</relationshipLabel>
    <relationshipName>DisclosureConsents</relationshipName>
    <type>Lookup</type>
</CustomField>