force-app/main/default/objects/DisclosureConsent__c/fields/FinancialAccount__c.field-meta.xml
<CustomField>
    <fullName>FinancialAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Disclosure related to financial account</description>
    <label>Financial Account</label>
    <referenceTo>FinServ__FinancialAccount__c</referenceTo>
    <relationshipLabel>Disclosure Consents</relationshipLabel>
    <relationshipName>DisclosureConsents</relationshipName>
    <type>Lookup</type>
</CustomField>