force-app/main/default/objects/DisclosureConsent__c/fields/Remarks__c.field-meta.xml
<CustomField>
    <fullName>Remarks__c</fullName>
    <description>Any remarks on the disclosure</description>
    <label>Remarks</label>
    <length>40</length>
    <type>Text</type>
</CustomField>